force-app/main/default/objects/Contact/fields/Total_UtFC_General_Support_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Total_UtFC_General_Support_Gifts__c</fullName>
    <description>Total sum of donations to Utah Film Center general support campaigns.</description>
    <inlineHelpText>Total sum of donations to Utah Film Center general support campaigns.</inlineHelpText>
    <label>Total UtFC General Support Gifts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>