force-app/main/default/objects/Contact/fields/Tumbleweeds_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Tumbleweeds_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tumbleweeds Newsletter</label>
    <type>Checkbox</type>
</CustomField>