force-app/main/default/objects/Contact/fields/Unmarried_Name__c.field-meta.xml
<CustomField>
    <fullName>Unmarried_Name__c</fullName>
    <label>Unmarried Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>