force-app/main/default/objects/Contact/fields/VIP_Donor_Email_Group__c.field-meta.xml
<CustomField>
    <fullName>VIP_Donor_Email_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Donor Email Group</label>
    <type>Checkbox</type>
</CustomField>