force-app/main/default/objects/Contact/fields/Weekly_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Newsletter</label>
    <type>Checkbox</type>
</CustomField>