force-app/main/default/objects/Contact/recordTypes/CnP_PaaS__C_P_Online.recordType-meta.xml
<RecordType>
    <fullName>CnP_PaaS__C_P_Online</fullName>
    <active>false</active>
    <label>C&amp;P Online</label>
</RecordType>