force-app/main/default/objects/Contact/listViews/Active_Members.listView-meta.xml
<ListView>
    <fullName>Active_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Household_Membership_Status__c</field>
        <operation>contains</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>npsp__Primary_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Household_Membership_Level__c</field>
        <operation>notContain</operation>
        <value>foundry</value>
    </filters>
    <label>Active Members w/o Foundry - List Send</label>
</ListView>