force-app/main/default/objects/Contact/listViews/Behind_the_Animation.listView-meta.xml
<ListView>
    <fullName>Behind_the_Animation</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>npsp__Primary_Affiliation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Educational_Interests__c</field>
        <operation>includes</operation>
        <value>Behind the Animation</value>
    </filters>
    <label>Behind the Animation</label>
</ListView>