force-app/main/default/objects/Contact/listViews/Behind_the_Animation_Interest.listView-meta.xml
<ListView>
    <fullName>Behind_the_Animation_Interest</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Educational_Interests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Educational_Interests__c</field>
        <operation>includes</operation>
        <value>Behind the Animation,Moving Stories,All</value>
    </filters>
    <label>Behind the Animation &amp; Moving - Interest</label>
</ListView>