force-app/main/default/objects/Contact/listViews/Email_Opt_Out_list.listView-meta.xml
<ListView>
    <fullName>Email_Opt_Out_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Email Opt Out</label>
</ListView>