force-app/main/default/objects/Contact/listViews/Garden_Party_Email_Group.listView-meta.xml
<ListView>
    <fullName>Garden_Party_Email_Group</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Garden_Party_Email_Group__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Garden Party Email Group</label>
</ListView>