force-app/main/default/objects/Contact/listViews/Giving_Level_Crew.listView-meta.xml
<ListView>
    <fullName>Giving_Level_Crew</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>npo02__OppAmountLastNDays__c</columns>
    <columns>npo02__TotalOppAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Giving_Level__c</field>
        <operation>equals</operation>
        <value>Crew</value>
    </filters>
    <label>Giving Level = Crew</label>
</ListView>