force-app/main/default/objects/Contact/listViews/Horizonte_School.listView-meta.xml
<ListView>
    <fullName>Horizonte_School</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School_Name__c</field>
        <operation>contains</operation>
        <value>Horizonte</value>
    </filters>
    <label>Horizonte School</label>
</ListView>