force-app/main/default/objects/Contact/listViews/School_Contact.listView-meta.xml
<ListView>
    <fullName>School_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Grades_Taught__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>School Contact</label>
</ListView>