force-app/main/default/objects/Contact/listViews/SL_County_Reps.listView-meta.xml
<ListView>
    <fullName>SL_County_Reps</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliation__c</field>
        <operation>equals</operation>
        <value>Salt Lake City Council</value>
    </filters>
    <label>SL County Reps</label>
</ListView>