force-app/main/default/objects/Contact/listViews/UFC_Board_Members.listView-meta.xml
<ListView>
    <fullName>UFC_Board_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Affiliation__c</columns>
    <columns>Interests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliation__c</field>
        <operation>equals</operation>
        <value>UFC Board Member</value>
    </filters>
    <label>UFC Board Members</label>
</ListView>