force-app/main/default/objects/Contact/listViews/Utah_Legislature.listView-meta.xml
<ListView>
    <fullName>Utah_Legislature</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliation__c</field>
        <operation>equals</operation>
        <value>Utah Legislature</value>
    </filters>
    <label>Utah Legislature</label>
</ListView>